--- a/frontend/public/EducarLab.html
+++ b/frontend/public/EducarLab.html
@@ -64,7 +64,7 @@
                 <a class="nav-link" href="nosotros.html">EducarLAB</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#virtual">360</a>
+                <a class="nav-link" href="#virtual">Recorrido</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#Labs">Actividades</a>
@@ -179,7 +179,7 @@
           <div class="col-md-6">
             <div class="virtual-content">
               <h2>Conoce nuestras instalaciones</h2>
-              <h3>Recorrido Virtual 360°</h3>
+              <h3>Recorrido Virtual</h3>
               <ul class="feature-list">
                 <li>
                   <span
@@ -188,8 +188,7 @@
                   >
                   <div>
                     <p>
-                      Nuevos elementos interactivos, texto, video, audio,
-                      galeria de imagenes.
+                      Nuevos elementos. Galeria de imagenes.
                     </p>
                   </div>
                 </li>
@@ -220,7 +219,7 @@
               />
               <div class="virtual-overlay">
                 <div class="overlay-content">
-                  <span class="overlay-icon">+6</span>
+                  <span class="overlay-icon">6</span>
                   <div class="overlay-text">
                     <p>Laboratorios para explorar.</p>
                   </div>
@@ -329,7 +328,7 @@
 
     <section id="comentarios" class="comentario-mariano section">
       <div class="slide-container swiper">
-          <h2 class="text-center titulocomentario">¿Por Qué Amamos EducarLab?</h2>
+          <h2 class="text-center titulocomentario">¿Por qué amamos Educ.ar Lab?</h2>
           <div class="slide-content">
               <div class="card-wrapper swiper-wrapper">
                   <!-- Los comentarios se cargarán dinámicamente aquí -->
@@ -384,7 +383,7 @@
               <ul class="list-unstyled">
                 <li><a href="#pasos">Reservas</a></li>
                 <li><a href="nosotros.html">EducarLab</a></li>
-                <li><a href="#virtual">360</a></li>
+                <li><a href="#virtual">Recorrido</a></li>
                 <li><a href="#Labs">Actividades</a></li>
               </ul>
             </div>
@@ -430,7 +429,7 @@
             <div class="derecha">
               <!--Enlaces que dirigen a los terminos y condiciones y politica de privacidad-->
               <p>
-                <a href="http://localhost:3000/login">Admin</a> <!--etiqueta a que redirige al login.html para admin, reemplazar localhost a la hora de deploy!!!-->
+                <a href="http://localhost:3000/login">Admin</a> |<!--etiqueta a que redirige al login.html para admin, reemplazar localhost a la hora de deploy!!!-->
                 <a href="#">Terminos y Condiciones</a> |
                 <a href="#">Política de Privacidad</a>
               </p>
