--- a/frontend/public/recorrido.html
+++ b/frontend/public/recorrido.html
@@ -63,7 +63,7 @@
                 <a class="nav-link" href="nosotros.html">EducarLAB</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#virtual">360</a>
+                <a class="nav-link" href="#virtual">Recorrido</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="EducarLab.html">Actividades</a>
@@ -133,7 +133,7 @@
                   <ul class="list-unstyled">
                     <li><a href="EducarLab.html">Reservas</a></li>
                     <li><a href="nosotros.html">EducarLab</a></li>
-                    <li><a href="EducarLab.html">360</a></li>
+                    <li><a href="EducarLab.html">Recorrido</a></li>
                     <li><a href="EducarLab.html">Actividades</a></li>
                   </ul>
                 </div>
