arreglo de errores y envio de correo

--- a/backend/public/nosotros.html
+++ b/backend/public/nosotros.html
@@ -102,10 +102,10 @@
 
           <!-- Logos -->
           <section class="partners">
-              <img src="img/logos/Logo Chaco.png" alt="Logo Partner 1">
-              <img src="img/logos/Logo educar.png" alt="Logo Partner 2">
-              <img src="img/logos/Logo Fontana.png" alt="Logo Partner 3">
-              <img src="img/logos/Logo Ministerio.png" alt="Logo Partner 4">
+              <img src="img/logos/Logo Chaco.png" alt="Logo del chaco">
+              <img src="img/logos/logoeducarfooter2.png" alt="Logo Educar">
+              <img src="img/logos/Logo Fontana.png" alt="Logo Fontana">
+              <img src="img/logos/Logo Ministerio.png" alt="Logo Ministerio">
           </section>
 
           <!-- Section: Image with caption -->
