--- a/backend/public/recorrido.html
+++ b/backend/public/recorrido.html
@@ -157,7 +157,7 @@
                         alt="Logo Chaco"
                       />
                       <img
-                        src="img/logos/Logo educar.png"
+                        src="img/logos/logoeducarfooter2"
                         alt="Logo Educar"
                       />
                       <img
