--- a/backend/public/EducarLab.html
+++ b/backend/public/EducarLab.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -328,19 +327,23 @@
     </section>
 
     <section id="comentarios" class="comentario-mariano section">
-      <div class="slide-container swiper">
-          <h2 class="text-center titulocomentario">¿Por qué amamos Educ.ar Lab?</h2>
-          <div class="slide-content">
-              <div class="card-wrapper swiper-wrapper">
-                  <!-- Los comentarios se cargarán dinámicamente aquí -->
-              </div>
-          </div>
-  
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
-      </div>
-  </section>
+    <div class="container-comentarios">
+        <h2 class="text-center titulocomentario">¿Por qué amamos Educ.ar Lab?</h2>
+        <div id="comentariosCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
+            <div class="carousel-inner">
+                <!-- Los comentarios se cargarán dinámicamente aquí -->
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#comentariosCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#comentariosCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+</section>
 
 
     <!--Seccion del pie de pagina-->
@@ -407,7 +410,7 @@
                     alt="Logo Chaco"
                   />
                   <img
-                    src="img/logos/Logo educar.png"
+                    src="img/logos/logoeducarfooter2.png"
                     alt="Logo Educar"
                   />
                   <img
